# pralab-plot

./: .gitignore  LICENSE  pyproject.toml  test_library.py
src/pralab_plot/: __init__.py  base.py
src/pralab_plot/plot/: __init__.py  ipy_plot.py
src/pralab_plot/plot/realtime_plot/: notebook.py  server.py
