[project]
name = "pralab-plot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kipra7", email = "124507187+Kipra7@users.noreply.github.com" }
]
requires-python = ">=3.10"
dependencies = [
    "bokeh>=3.7.1",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "pandas>=2.2.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "jupyterlab>=4.3.6",
    "pralab-plot",
]

[tool.uv.sources]
pralab-plot = { workspace = true }
